--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,13 @@
 version: '3'
 
 services:
-  pqai_reranker_api:
-    container_name: dev_pqai_classifier_api
+  pqai_classifier_api:
+    container_name: dev_pqai_classifier
     build: .
     command: bash -c "pip install --no-cache-dir --upgrade -r /app/requirements.txt && uvicorn main:app --host 0.0.0.0 --port 80 --reload"
     restart: always
     ports: 
-      - 8004:80
+      - ${PORT}:80
     volumes:
       - type: bind
         source: ./assets
