--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.2'
 
 services:
-  pqai_encoder_api:
-    container_name: prod_pqai_classifier_api
+  pqai_classifier_api:
+    container_name: pqai_classifier
     build: .
     command: bash -c "pip install --no-cache-dir --upgrade -r /app/requirements.txt && uvicorn main:app --host 0.0.0.0 --port 80"
     restart: always
     ports: 
-      - 8004:80
+      - ${PORT}:80
     volumes:
       - type: bind
         source: ./assets
