--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,10 @@
-absl-py==0.15.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-astunparse==1.6.3
-Babel==2.9.1
-backcall==0.2.0
-bleach==4.1.0
-cachetools==4.2.4
-certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
-charset-normalizer==2.1.1
-clang==5.0
-click==8.1.3
-defusedxml==0.7.1
-executing==0.8.3
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.47.0
-h11==0.13.0
-h5py==3.1.0
-idna==3.3
-importlib-metadata==4.12.0
-importlib-resources==5.4.0
-ipython-genutils==0.2.0
-json5==0.9.6
-jupyterlab-pygments==0.1.2
-keras==2.6.0
-keras-bert==0.88.0
-keras-embed-sim==0.10.0
-keras-layer-normalization==0.16.0
-keras-multi-head==0.29.0
-keras-pos-embd==0.13.0
-keras-position-wise-feed-forward==0.8.0
-Keras-Preprocessing==1.1.2
-keras-self-attention==0.51.0
-keras-transformer==0.40.0
-libclang==14.0.6
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbformat==5.1.3
-notebook-shim==0.1.0
-numpy==1.19.5
-oauthlib==3.2.0
-opt-einsum==3.3.0
-pandocfilters==1.5.0
-pickleshare==0.7.5
-protobuf==3.19.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-python-dotenv==0.19.0
-pyzmq==22.3.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-Send2Trash==1.8.0
-six==1.15.0
-sniffio==1.2.0
-stack-data==0.2.0
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.6.3
-tensorflow-estimator==2.6.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-tornado==6.1
-typing-extensions==3.10.0.2
-urllib3==1.26.12
-uvicorn==0.18.3
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.2
-wrapt==1.12.1
-zipp==3.8.1
+fastapi==0.78.0
+keras==2.10.0
+keras_bert==0.88.0
+MatchZoo==2.2.0
+numpy==1.20.0
+tensorflow==2.10.0
+pydantic==1.9.0
+python-dotenv==0.20.0
+requests==2.26.0
+uvicorn==0.17.6
