--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3.2'
+version: '3'
 
 services:
-  pqai_classifier_api:
+  pqai_classifier:
+    image: pqai_classifier
     container_name: pqai_classifier
     build: .
-    command: bash -c "pip install --no-cache-dir --upgrade -r /app/requirements.txt && uvicorn main:app --host 0.0.0.0 --port 80"
     restart: always
-    ports: 
-      - ${PORT}:80
     volumes:
       - type: bind
         source: ./assets
         target: /app/assets
+    ports:
+      - ${PORT}:80
     environment:
       - PORT=${PORT}
